fix alignment of imdb star icon

--- a/static/styles/general.css
+++ b/static/styles/general.css
@@ -273,7 +273,7 @@ video {
 }
 .ratings > .imdb.rating .icon {
 	height: 2.3em;
-	align-self: center;
+	align-self: normal;
 }
 .ratings > .imdb.rating .points > :first-child {
 	font-size: 1.3em;
